Version 0.3-0
=============
- Major API changes (gsrmtp replaced by gMCP - but now the API should stay relatively stable).  
- GraphGUI can now also be called directly on objects of class graphSRMTP, like graphGUI(rejectNode(graph, "H1")).
- Small GUI bug-fix for placing edge labels while in another zoom level than 100%.
- Completely separated nodes (which only occur in sub-optimal testing procedures) are now handled correctly.
- If the graph has no nodeRenderInfo available when the GUI is called, the edges are placed in a circle.

Version 0.2-4
=============
- After some alpha and beta releases on r-forge this is the first version on CRAN.
- We support: Graphs with epsilon nodes, confidence intervals, adjusted p-values.